# IntelliEditor

./: .gitignore  CMakeLists.txt  IA.md  Makefile  README.md  intellieditor  rules.md  test
include/: nlp.h  rules.h
src/nlp/: hunspell_wrap.c  llm_client.c  tokenizer.c
src/rules/: rule_engine.c  rules.c
src/rules/checkers/: regex_checker.c
src/ui/: main_window.c
tests/: test_rules_cmocka.c
